--- a/index.Rmd
+++ b/index.Rmd
@@ -63,8 +63,8 @@ However, weekly class schedules are subject to change depending on the progress 
 | 3 | 18/10 | Basic principles of data visualization.| [🔗](https://github.com/MAT381E-Fall21/Week_05_06_Lecture_Notes)|
 | 4 | 25/10 | Data visualization tools.| |
 | 5 | 01/11 | Handling with strings and dates in data. **(HW1 assigned, Project proposal submission)**| [🔗](https://github.com/MAT381E-Fall21/Week_07_Lecture_Notes)|
-| 6 | 08/11 | Scraping data from web.||
-| 7 | 15/11 | Data extraction from social networking sites. | |
+| 6 | 08/11 | Scraping data from web.| [🔗](https://github.com/MAT381E-Fall21/Week_08_Lecture_Notes)|
+| 7 | 15/11 | Data extraction from social networking sites. | [🔗](https://github.com/MAT381E-Fall21/Week_09_Lecture_Notes)|
 | 8 | 22/11 | ITU Fall Break. ||
 | 9 | 29/11 | Basic principles of text mining.| |
 | 10 | 06/12 | Network analysis and visualization.| |
