--- a/index.Rmd
+++ b/index.Rmd
@@ -58,16 +58,16 @@ However, weekly class schedules are subject to change depending on the progress 
 
 | **Week** | **Date**   | **Topic**         |  <i class="fab fa-github"></i> | 
 | :---:    | :---:      | :------------------|:------:|
-| 1 | 04/10 | Introduction to data science and computational tools. **(Project proposal assigned)** |  [🔗](https://github.com/MAT381E-Fall21/Week_01_02_Lecture_Notes) |
+| 1 | 04/10 | Introduction to data science and computational tools. **(Project proposal assigned)** |  [🔗](https://github.com/MAT381E-Fall21/Week_01_02_Lecture_Notes) [🔗](https://github.com/MAT381E-Fall21/Project_Proposal) |
 | 2 | 11/10 | Tools for data importing, manipulating, and tidying.|  [🔗](https://github.com/MAT381E-Fall21/Week_03_04_Lecture_Notes) |
 | 3 | 18/10 | Basic principles of data visualization.| [🔗](https://github.com/MAT381E-Fall21/Week_05_06_Lecture_Notes)|
 | 4 | 25/10 | Data visualization tools.| |
-| 5 | 01/11 | Handling with strings and dates in data. **(HW1 assigned, Project proposal submission)**| [🔗](https://github.com/MAT381E-Fall21/Week_07_Lecture_Notes)|
+| 5 | 01/11 | Handling with strings and dates in data. **(HW1 assigned, Project proposal submission)**| [🔗](https://github.com/MAT381E-Fall21/Week_07_Lecture_Notes) [🔗](https://github.com/MAT381E-Fall21/Homework_I) [🔗](https://github.com/MAT381E-Fall21/project_interim_report)|
 | 6 | 08/11 | Scraping data from web.| [🔗](https://github.com/MAT381E-Fall21/Week_08_Lecture_Notes)|
 | 7 | 15/11 | Data extraction from social networking sites. | [🔗](https://github.com/MAT381E-Fall21/Week_09_Lecture_Notes)|
 | 8 | 22/11 | ITU Fall Break. ||
 | 9 | 29/11 | Basic principles of text mining.| |
-| 10 | 06/12 | Network analysis and visualization.| |
+| 10 | 06/12 | Network analysis and visualization.| [🔗](https://github.com/MAT381E-Fall21/Week_10_Lecture_Notes)|
 | 11 | 13/12 | Basic principles of geographic information system.| |
 | 12 | 20/12 | Visualization of spatial and urban data. **(HW2 assigned, Project interim report submission)**| |
 | 13 | 27/12 | Basic principles of interactive data visualization.|  |
@@ -238,6 +238,6 @@ for more information on distance education regulations at ITU.
 
 ## Acknowledgement
 
-This course could not be possible without [ITU-Zoom](https://itu-edu-tr.zoom.us/), [ITU-Ninova](https://ninova.itu.edu.tr/tr/), [RStudio](https://www.rstudio.com/) along with all open-source packages, [GitHub](https://github.com/), [GitHub Classroom](https://classroom.github.com/) and generous support of [Data Camp](https://www.datacamp.com/). 
+This course could not be possible without [ITU-Zoom](https://itu-edu-tr.zoom.us/), [ITU-Ninova](https://ninova.itu.edu.tr/tr/), [RStudio](https://www.rstudio.com/) along with all open-source packages, [GitHub](https://github.com/), [GitHub Classroom](https://classroom.github.com/) and generous support of [DataCamp](https://www.datacamp.com/). 
 The course slides are prepared with [R xaringan](https://github.com/yihui/xaringan) along with
 [R xaringan extra](https://github.com/gadenbuie/xaringanExtra). The course web site is built on [Distill for R Markdown](https://rstudio.github.io/distill/).
