--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,8 @@
 ---
 title: 'MAT381E: Introduction to Data Science'
 output:
-  distill::distill_article
+  distill::distill_website
 ---
-
-##https://stackoverflow.com/questions/61584128/change-color-of-header-for-distill-blog-rmarkdown
 
 ## Instructor Information
 
