--- a/index.Rmd
+++ b/index.Rmd
@@ -69,7 +69,7 @@ However, weekly class schedules are subject to change depending on the progress 
 | 8 | 22/11 | ITU Fall Break. ||
 | 9 | 29/11 | Basic principles of text mining.| |
 | 10 | 06/12 | Network analysis and visualization.| [🔗](https://github.com/MAT381E-Fall21/Week_10_Lecture_Notes)|
-| 11 | 13/12 | Basic principles of geographic information system.|[🔗](https://github.com/MAT381E-Fall21/Week_11_12_Lecture_Notes) |
+| 11 | 13/12 | Basic principles of geographic information system.|[`Slides`](https://mat381e-fall21.github.io/Week_11_12_Lecture_Notes/#1), [🔗](https://github.com/MAT381E-Fall21/Week_11_12_Lecture_Notes) |
 | 12 | 20/12 | Visualization of spatial and urban data. **(Project interim report submission)**| |
 | 13 | 27/12 | Basic principles of interactive data visualization. **(HW2 assigned)**| [🔗](https://github.com/MAT381E-Fall21/Week_13_14_Lecture_Notes)  [🔗](https://github.com/MAT381E-Fall21/Homework_II)|
 | 14 | 03/01 | Interactive web-based data visualization tools.| |
